# token-lists

./: Cargo.toml
src/: main.rs
src/json/pairs/Arbitrum/: CamelotPairs.json  SushiPairs.json  UniswapPairs.json
src/json/pairs/Optimism/: VeloPairs.json
src/json/token_lists/Arbitrum/: CamelotTokens.json  UniswapTokens.json
src/json/token_lists/optimism/: VeloTokens.json
