[package]
name = "dex-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = "1.0.2"
eyre = "0.6.8"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
